/*
 * Student Name: Xihai Ren
 * Student No: 041127486
 * Professor: Islam Gomaa
 * Due Date: 2024/06/14
 * Description: Assignment 2 - Library Management System
 */
package com.algonquin.cst8288.assignment2.event;

/**
 * An enumeration of event types in the Library Management System.
 * This enum defines the various types of events that can be created and managed,
 * including workshops, book launches, kids' stories, and movie nights.
 *
 * @version 1.0.0
 * @since Oracle 17.0.11
 * 
 * @author Xihai Ren
 */
public enum EventType {
    WORKSHOP,
    BOOK_LAUNCH,
    KIDS_STORY,
    MOVIE_NIGHT
}
