@startuml
'package client
class client.Client{
    + {static} void main(String[] args)
}
'package constants
class constants.Constants
'package database
class database.DBConnection
class database.DBOperations
'package library
class library.LibraryFactory
class library.Library
enum library.LibraryType
class library.PublicLibrary
class library.AcademicLibrary
'package event
abstract class event.Event
enum event.EventType
class event.WorkShopEvent
class event.BookLaunchEvent
class event.KidsStoryEvent
class event.MovieNightEvent
class event.EventFactory



'package logger
class logger.LMSLogger
enum logger.LogLevel

LibraryFactory ..> Library
Library <|-- PublicLibrary
Library <|-- AcademicLibrary
LibraryType <. Library
'PublicLibrary .> EventFactory
'AcademicLibrary .> EventFactory


Library .> Event 
Library .> EventFactory

Event .> EventType
EventFactory .> Event
Event <|-- WorkShopEvent
Event <|-- BookLaunchEvent
Event <|-- KidsStoryEvent
Event <|-- MovieNightEvent

BookLaunchEvent ..> Constants
WorkShopEvent ..> Constants
KidsStoryEvent ..> Constants
MovieNightEvent ..> Constants

DBOperations ..> DBConnection
Event <. DBOperations

LMSLogger ..> LogLevel

Client ..> LibraryFactory
Client ..> Event
Client ..> DBOperations

DBOperations ..> LMSLogger
DBConnection ..> LMSLogger

WorkShopEvent ..> LMSLogger
BookLaunchEvent ..> LMSLogger
KidsStoryEvent ..> LMSLogger
MovieNightEvent ..> LMSLogger
'EventFactory ..> LMSLogger


@enduml
